fix: remove play button z-index (#282)

--- a/src/v2/styles/AttachmentList/AttachmentList-layout.scss
+++ b/src/v2/styles/AttachmentList/AttachmentList-layout.scss
@@ -340,7 +340,6 @@
     height: calc(var(--str-chat__spacing-px) * 36);
     width: calc(var(--str-chat__spacing-px) * 36);
     cursor: pointer;
-    z-index: 1;
 
     svg {
       width: var(--str-chat__spacing-3);
@@ -415,6 +414,7 @@
       width: calc(var(--str-chat__spacing-px) * 45);
     }
 
+    // Angular SDK element, do not remove
     stream-voice-recording-wavebar {
       flex: 1;
     }
